--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,3 +7,10 @@
       @apply py-2 px-5 bg-violet-500 text-white font-semibold rounded-full shadow-md hover:bg-violet-700 focus:outline-none focus:ring focus:ring-violet-400 focus:ring-opacity-75;
     }
   }
+  body {
+    background-image: url('/public/image/background.png');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+
